--- a/Notebook/linearRegressioneRegularized.ipynb
+++ b/Notebook/linearRegressioneRegularized.ipynb
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1)Data visualizzation"
+    "# 1)Data visualization"
    ]
   },
   {
